--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,13 +1,16 @@
 {
-  "env": {
-    "browser": true,
-    "node": true,
-    "es6": true
-  },
-  "extends": "eslint:recommended",
+  "root": true,
+  "parser": "@typescript-eslint/parser",
   "parserOptions": {
+    "ecmaVersion": 6,
     "sourceType": "module",
-    "ecmaVersion": 8
+    "project": "./tsconfig.json"
   },
-  "rules": {}
+  "plugins": ["@typescript-eslint"],
+  "extends": [
+    "eslint:recommended",
+    "plugin:@typescript-eslint/eslint-recommended",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:@typescript-eslint/recommended-requiring-type-checking"
+  ]
 }
