--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@tsconfig/recommended": "^1.0.1",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.23",
+    "@types/pg": "^8.6.5",
     "@typescript-eslint/eslint-plugin": "^5.17.0",
     "@typescript-eslint/parser": "^5.17.0",
     "dotenv": "^16.0.0",
@@ -47,6 +48,7 @@
     "typescript": "^4.6.3"
   },
   "dependencies": {
-    "express": "^4.17.3"
+    "express": "^4.17.3",
+    "pg": "^8.7.3"
   }
 }
