--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
       ]
     }
   },
+  "engines": {
+    "node": "16.9.1"
+  },
   "devDependencies": {
     "@tsconfig/recommended": "^1.0.1",
     "@types/express": "^4.17.13",
