--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node src/index.js",
     "ts": "tsc -w",
     "dev": "nodemon src/index.js",
-    "lint": "eslint \"./src/**/*.js\" --fix"
+    "lint": "eslint \"./src/**/*.js\" --fix",
+    "postinstall": "tsc"
   },
   "repository": {
     "type": "git",
@@ -37,6 +38,7 @@
   },
   "devDependencies": {
     "@tsconfig/recommended": "^1.0.1",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.23",
     "@types/pg": "^8.6.5",
@@ -51,6 +53,7 @@
     "typescript": "^4.6.3"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.3",
     "pg": "^8.7.3"
   }
